2007-01-13  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpfiledialog.c
	* app/widgets/gimpthumbbox.[ch]: save some string copies by
	changing gimp_thumb_box_set_uri() to gimp_thumb_box_take_uri().

2007-01-12  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/compose.c
	* plug-ins/common/decompose.c: applied patch from Robert Krawitz
	that adds HSL support (bug #395928).

2007-01-12  Michael Natterer  <mitch@gimp.org>

	* app/vectors/gimpanchor.[ch]: renamed gimp_anchor_duplicate()
	to gimp_anchor_copy().

	* app/vectors/gimpstroke.c (gimp_stroke_real_duplicate): changed
	accordingly.

2007-01-12  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpdashpattern.[ch]: register GIMP_TYPE_DASH_PATTERN
	as boxed type. Added "new" to function names which create dash
	patterns. Changed and renamed GValue functions to functions which
	convert the dash pattern between GArray and GValueArray.

	* app/core/gimpstrokeoptions.c
	* app/widgets/gimpcellrendererdashes.c
	* app/widgets/gimpstrokeeditor.c: changed accordingly.

	* app/widgets/gimpdasheditor.c: ditto. Get rid of the recently
	added manual memory management. The list store manages boxed types
	all by itself.

2007-01-12  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/display.pdb
	* tools/pdbgen/pdb/drawable.pdb
	* tools/pdbgen/pdb/image.pdb
	* tools/pdbgen/pdb/vectors.pdb: added PDB functions to validate
	display, drawable, image and vectors IDs.

	* app/pdb/image_cmds.c
	* app/pdb/vectors_cmds.c
	* app/pdb/display_cmds.c
	* app/pdb/internal_procs.c
	* app/pdb/drawable_cmds.c
	* libgimp/gimpimage_pdb.[ch]
	* libgimp/gimpdisplay_pdb.[ch]
	* libgimp/gimpdrawable_pdb.[ch]
	* libgimp/gimpvectors_pdb.[ch]: regenerated.

	* libgimp/gimp.def: updated.

2007-01-12  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpenumstore.c: added a construct-only property
	to specify the enum-type.

2007-01-12  Sven Neumann  <sven@gimp.org>

	* app/about.h (GIMP_COPYRIGHT): updated copyright.
